[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/playerShip1_red.png" type="Texture" id=2]
[ext_resource path="res://assets/shield1.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0012

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="Exhaust" type="Sprite" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.75, 0.75 )
polygon = PoolVector2Array( 12.5, -34.9, 16.2, -14.5, 17.1, -14.5, 35.8, -2.7, 42.6, -10.5, 49.3, -10.5, 49.5, 24.7, 46.6, 29.5, 42.7, 29.5, 39.7, 26.5, 16.4, 31.2, 11.9, 37.5, -12.2, 37.5, -18.4, 30.5, -22.8, 30.5, -39.8, 25.5, -45.2, 29.8, -47.5, 28.8, -47.5, 27.3, -49.5, 25.3, -49.5, -9.5, -48.9, -9.5, -41.5, -10.9, -41.5, -8.4, -35.9, -3.5, -17.5, -12.8, -12.5, -34.9, -12.5, -37.5, 12.5, -37.5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -11, -33, 11, -33, 15, -17, 27, -8, 31, -13, 40, -13, 40, 23, 10, 33, -12, 33, -41, 24, -41, -10, -31, -12, -25, -8, -18, -12 )

[node name="Shield" type="Area2D" parent="."]
position = Vector2( 0, 5 )

[node name="Sprite" type="Sprite" parent="Shield"]
position = Vector2( 0, -10 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
scale = Vector2( 1, 0.95 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="Shield" to="." method="_on_Shield_area_entered"]
[connection signal="body_entered" from="Shield" to="." method="_on_Shield_body_entered"]
